asteroidlab-iptables-backup
# Generated by iptables-save v1.4.21 on Sun Feb 19 05:12:47 2017
*mangle
:PREROUTING ACCEPT [49900:16760752]
:INPUT ACCEPT [36131:2846889]
:FORWARD ACCEPT [13768:13913941]
:OUTPUT ACCEPT [31644:24604625]
:POSTROUTING ACCEPT [45194:38506811]
COMMIT
# Completed on Sun Feb 19 05:12:47 2017
# Generated by iptables-save v1.4.21 on Sun Feb 19 05:12:47 2017
*raw
:PREROUTING ACCEPT [45968:16471331]
:OUTPUT ACCEPT [28775:22934625]
COMMIT
# Completed on Sun Feb 19 05:12:47 2017
# Generated by iptables-save v1.4.21 on Sun Feb 19 05:12:47 2017
*nat
:PREROUTING ACCEPT [1270:187165]
:INPUT ACCEPT [949:162156]
:OUTPUT ACCEPT [103:7598]
:POSTROUTING ACCEPT [103:7598]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sun Feb 19 05:12:47 2017
# Generated by iptables-save v1.4.21 on Sun Feb 19 05:12:47 2017
*filter
:INPUT ACCEPT [3906:283383]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [3619:2906433]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j NFQUEUE --queue-num 0
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -j NFQUEUE --queue-num 0
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Sun Feb 19 05:12:47 2017
