default-iptables-backup
# Generated by iptables-save v1.4.21 on Sun Feb 19 01:04:59 2017
*raw
:PREROUTING ACCEPT [22773:1322067]
:OUTPUT ACCEPT [35342:39836196]
COMMIT
# Completed on Sun Feb 19 01:04:59 2017
# Generated by iptables-save v1.4.21 on Sun Feb 19 01:04:59 2017
*nat
:PREROUTING ACCEPT [74:11788]
:INPUT ACCEPT [40:7040]
:OUTPUT ACCEPT [11:1187]
:POSTROUTING ACCEPT [11:1187]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sun Feb 19 01:04:59 2017
# Generated by iptables-save v1.4.21 on Sun Feb 19 01:04:59 2017
*filter
:INPUT ACCEPT [6543:386920]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [10406:12226070]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Sun Feb 19 01:04:59 2017
